src/App.css
.App {
  text-align: center;
  /* padding: 20px; */
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.layout-background {
  background-color: #fff;
  height: '100vh';
  position: 'fixed';
}

.layout-menu-background {
  background-color: #fff;
}

.content {
  padding: 20px
}

.category-settings-menu-item-group {
  max-height: 300px;
  overflow: auto;
  overflow-x: hidden;
}

.animated-blue-gradient {
  background: repeating-linear-gradient(to right, #1890ff 0%, #91d5ff 50%, #1890ff 100%);
  width: 100%;
  background-size: 200% auto;
  background-position: 0 100%;
  animation: gradient 2s infinite;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
}

@keyframes gradient { 
  0%   { background-position: 0 0; }
  100% { background-position: -200% 0; }
}

